@@ -78,11 +78,11 @@ setup (
         test = [
             'zope.app.testing',
             'zope.app.container',
+            'zope.app.i18n',
             'zope.testing',
             'z3c.coverage',
             'z3c.template',
             'z3c.pt',
-            'zope.app.i18n',
             'lxml',
             ],
         adding = ['zope.app.container'],
@@ -104,6 +104,7 @@ setup (
         'zope.schema',
         'zope.security',
         'zope.traversing',
+        'z3c.pt.compat',
         ],
     dependency_links = ['http://download.zope.org/distribution'],
     zip_safe = False,
