@@ -5,6 +5,9 @@ CHANGES
 Version 2.0.0 (2008-??-??)
 --------------------------
 
+- Refactoring: Use the ``z3c.pt.compat`` template engine compatibility
+  layer.
+
 - Feature: Added benchmarking suite demonstrating performance gain
   when using ``z3c.pt``.
 
